fixes alignment issues of the popup

--- a/less/hotgraphic.less
+++ b/less/hotgraphic.less
@@ -38,6 +38,10 @@
 
 	.notify-popup {
 		background-color: transparent;
+
+		.notify-popup-content {
+			width: auto;
+		}
 	}
 
 	.notify-popup-content-inner {
